--- a/.github/workflows/workflow_ci.yml
+++ b/.github/workflows/workflow_ci.yml
@@ -322,10 +322,14 @@ jobs:
       - name: E2E Tests
         uses: ./.github/actions/run-e2e
         with:
-          shopware: ${{ matrix.shopware }}
-          php: ${{ matrix.php }}
-          # we want to send results to testrail here
-          testrail: true
+          # -------------------------------------------
+          SHOPWARE: ${{ matrix.shopware }}
+          PHP: ${{ matrix.php }}
+          # -------------------------------------------
+          RUN_CYPRESS: true,
+          MOLLIE_APIKEY_TEST: ${{ secrets.MOLLIE_APIKEY_TEST }}
+          # -------------------------------------------
+          TESTRAIL: true
           TESTRAIL_DOMAIN: ${{ secrets.TESTRAIL_DOMAIN }}
           TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
           TESTRAIL_PASSWORD: ${{ secrets.TESTRAIL_PASSWORD }}
@@ -341,12 +345,13 @@ jobs:
     steps:
 
       - name: Installation Tests
-        uses: ./.github/workflows/action_e2e.yml
+        uses: ./.github/actions/run-e2e
         with:
-          secrets: inherit
-          shopware: ${{ matrix.shopware }}
-          php: 8.1
+          # -------------------------------------------
+          SHOPWARE: ${{ matrix.shopware }}
+          PHP: 8.1
+          # -------------------------------------------
           # only do installation tests without Cypress here
           # this is just for old Shopware versions that do not
           # support the API that we need for Cypress
-          runCypress: false
+          RUN_CYPRESS: false
