--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -24,7 +24,8 @@ inputs:
   # CYPRESS SETTINGS
   RUN_CYPRESS:
     description: "If disabled, only the plugin installation will be tested"
-    default: 'true'
+    type: boolean
+    default: true
     required: false
   MOLLIE_APIKEY_TEST:
     description: "The Mollie Test API key. Required if Cypress is being executed."
@@ -36,13 +37,15 @@ inputs:
     required: false
   REMOVE_DEPRECATED_TESTS:
     description: "If enabled, tests that are marked es deprecated will be removed"
-    default: '0'
+    type: boolean
+    default: false
     required: false
   # ------------------------------------------------------------------------------------
   # TESTRAIL SETTINGS
   TESTRAIL:
     description: "If enabled, all results will be sent to TestRail."
-    default: 'false'
+    type: boolean
+    default: false
     required: false
   TESTRAIL_DOMAIN:
     description: "The domain for the TestRail endpoint"
@@ -126,12 +129,12 @@ runs:
     # --------------------------------------------------------------------------------------------------------------------------------------
 
     - name: Install Cypress
-      if: ${{ inputs.RUN_CYPRESS == 'true' }}
+      if: ${{ inputs.RUN_CYPRESS == true }}
       shell: bash
       run: cd tests/Cypress && make install -B
 
     - name: Remove deprecated Cypress Tests
-      if: ${{ inputs.RUN_CYPRESS == 'true' && inputs.REMOVE_DEPRECATED_TESTS != '0' }}
+      if: ${{ inputs.RUN_CYPRESS == true && inputs.REMOVE_DEPRECATED_TESTS == true }}
       shell: bash
       run: |
         # SEPA Direct Debit has been completely removed from Mollie. We have to remove that entry from the tests in old Cypress versions
@@ -139,14 +142,14 @@ runs:
         sed -i "/key: 'directdebit'/g" $(pwd)/tests/Cypress/cypress/integration/storefront/checkout/checkout-success.spec.js || true
 
     - name: Start Cypress
-      if: ${{ inputs.RUN_CYPRESS == 'true' && inputs.TESTRAIL != 'true' }}
+      if: ${{ inputs.RUN_CYPRESS == true && inputs.TESTRAIL != true }}
       shell: bash
       run: |
         cd tests/Cypress && \
         make run shopware=${{ inputs.SHOPWARE }} storeApiKey=${{ inputs._STORE_API_KEY }} url=https://${{ inputs._SHOP_DOMAIN }} filters="${{ inputs.FILTERS }}"
 
     - name: Start Cypress with TestRail
-      if: ${{ inputs.RUN_CYPRESS == 'true' && inputs.TESTRAIL == 'true' }}
+      if: ${{ inputs.RUN_CYPRESS == true && inputs.TESTRAIL == true }}
       shell: bash
       run: |
         cd tests/Cypress && \
@@ -162,7 +165,7 @@ runs:
     # --------------------------------------------------------------------------------------------------------------------------------------
 
     - name: Download Logs
-      if: ${{ inputs.RUN_CYPRESS == 'true' && always() }}
+      if: ${{ inputs.RUN_CYPRESS == true && always() }}
       shell: bash
       run: |
         mkdir -p $(pwd)/tests/Cypress/cypress/logs/shopware
@@ -171,7 +174,7 @@ runs:
         docker cp shop:/var/log/php/. $(pwd)/tests/Cypress/cypress/logs/apache
 
     - name: Store Cypress Results
-      if: ${{ inputs.RUN_CYPRESS == 'true' && always() }}
+      if: ${{ inputs.RUN_CYPRESS == true && always() }}
       uses: actions/upload-artifact@v2
       with:
         name: cypress_results_sw_v${{ inputs.SHOPWARE }}
