--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -126,12 +126,12 @@ runs:
     # --------------------------------------------------------------------------------------------------------------------------------------
 
     - name: Install Cypress
-      if: ${{ Boolean(inputs.RUN_CYPRESS) == 'true' }}
+      if: "Boolean(inputs.RUN_CYPRESS) == 'true'"
       shell: bash
       run: cd tests/Cypress && make install -B
 
     - name: Remove deprecated Cypress Tests
-      if: ${{ Boolean(inputs.RUN_CYPRESS) == 'true' && Boolean(inputs.REMOVE_DEPRECATED_TESTS) == 'true' }}
+      if: "Boolean(inputs.RUN_CYPRESS) == 'true' && Boolean(inputs.REMOVE_DEPRECATED_TESTS) == 'true'"
       shell: bash
       run: |
         # SEPA Direct Debit has been completely removed from Mollie. We have to remove that entry from the tests in old Cypress versions
@@ -139,14 +139,14 @@ runs:
         sed -i "/key: 'directdebit'/g" $(pwd)/tests/Cypress/cypress/integration/storefront/checkout/checkout-success.spec.js || true
 
     - name: Start Cypress
-      if: ${{ Boolean(inputs.RUN_CYPRESS) == 'true' && Boolean(inputs.TESTRAIL) == 'false' }}
+      if: "Boolean(inputs.RUN_CYPRESS) == 'true' && Boolean(inputs.TESTRAIL) == 'false'"
       shell: bash
       run: |
         cd tests/Cypress && \
         make run shopware=${{ inputs.SHOPWARE }} storeApiKey=${{ inputs._STORE_API_KEY }} url=https://${{ inputs._SHOP_DOMAIN }} filters="${{ inputs.FILTERS }}"
 
     - name: Start Cypress with TestRail
-      if: ${{ Boolean(inputs.RUN_CYPRESS) == 'true' && Boolean(inputs.TESTRAIL) == 'true' }}
+      if: "Boolean(inputs.RUN_CYPRESS) == 'true' && Boolean(inputs.TESTRAIL) == 'true'"
       shell: bash
       run: |
         cd tests/Cypress && \
@@ -162,7 +162,7 @@ runs:
     # --------------------------------------------------------------------------------------------------------------------------------------
 
     - name: Download Logs
-      if: ${{ Boolean(inputs.RUN_CYPRESS) == 'true' && always() }}
+      if: "Boolean(inputs.RUN_CYPRESS) == 'true' && always()"
       shell: bash
       run: |
         mkdir -p $(pwd)/tests/Cypress/cypress/logs/shopware
@@ -171,7 +171,7 @@ runs:
         docker cp shop:/var/log/php/. $(pwd)/tests/Cypress/cypress/logs/apache
 
     - name: Store Cypress Results
-      if: ${{ Boolean(inputs.RUN_CYPRESS) == 'true' && always() }}
+      if: "Boolean(inputs.RUN_CYPRESS) == 'true' && always()"
       uses: actions/upload-artifact@v2
       with:
         name: cypress_results_sw_v${{ inputs.SHOPWARE }}
